add: Article list

--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
 </head>
 <body>
 	<h1>Emil Pirfält</h1>
+
+	<section>
+		<h2>Some future article ides</h2>
+		<ul>
+			<li>Recursion</li>
+			<li>Function composition</li>
+			<li>JS Protoypes</li>
+			<li>Constructor functions</li>
+			<li>HTML Section elements, write the way I think</li>
+			<li>Markdown and headers</li>
+		</ul>
+	</section>
+
   <script src="assets/script/index.js"></script>
 </body>
 </html>
