Adding something to look at, testing github pages.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 <body>
 	<h1>Emil Pirfält</h1>
 
+	<nav>
+		About
+		|
+		Hire me
+		|
+		Note to self (blog)
+	</nav>
+
 	<section>
 		<h2>Some future article ides</h2>
 		<ul>
@@ -19,6 +27,8 @@
 			<li>Markdown and headers</li>
 		</ul>
 	</section>
+
+	<
 
   <script src="assets/script/index.js"></script>
 </body>
