Move script and style to a single file each.

--- a/hire-me.html
+++ b/hire-me.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Emil Pirfält</title>
 
-  <link href="assets/style/index.css" rel="stylesheet" />
+  <link href="assets/style.css" rel="stylesheet" />
 </head>
 <body>
 <h1 id="-emil-pirf-lt">﻿Emil Pirfält</h1>
