--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Emil Pirfält</title>
 
-  <link href="assets/style/index.css" rel="stylesheet" />
+  <link href="assets/style.css" rel="stylesheet" />
 </head>
 <body>
 	<h1>Emil Pirfält</h1>
@@ -30,6 +30,6 @@
 
 	<
 
-  <script src="assets/script/index.js"></script>
+  <script src="assets/script.js"></script>
 </body>
 </html>
