--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Emil Pirfält</title>
 
-  <link href="assets/style/index.css" rel="stylesheet" />
+  <link href="assets/style.css" rel="stylesheet" />
 </head>
 <body>
 	<h1>about</h1>
