root pages are now a file in the root, not a directory with an index file.

--- a/index.html
+++ b/index.html
@@ -6,29 +6,43 @@
   <link href="assets/style.css" rel="stylesheet" />
 </head>
 <body>
-	<h1>Emil Pirfält</h1>
+
+	<header>
+		<h1>Emil Pirfält</h1>
+		<p>Geek playing around</p>
+		<img src="assets/images/profile.jpg">
+	</header>
 
 	<nav>
-		About
+		<a href="about">About</a>
 		|
-		Hire me
-		|
-		Note to self (blog)
+		<a href="hire-me">Hire me</a>
 	</nav>
 
-	<section>
-		<h2>Some future article ides</h2>
-		<ul>
-			<li>Recursion</li>
-			<li>Function composition</li>
-			<li>JS Protoypes</li>
-			<li>Constructor functions</li>
-			<li>HTML Section elements, write the way I think</li>
-			<li>Markdown and headers</li>
-		</ul>
-	</section>
+	<div id="main">
 
-	<
+		<article>
+			<h1>article, should be pulled from resent</h1>
+			<p>all that article text</p>
+		</article>
+
+		<section>
+			<h2>Some future article ides</h2>
+			<ul>
+				<li>Recursion</li>
+				<li>Function composition</li>
+				<li>JS Protoypes</li>
+				<li>Constructor functions</li>
+				<li>HTML Section elements, write the way I think</li>
+				<li>Markdown and headers</li>
+			</ul>
+		</section>
+
+	</div>
+
+	<footer>
+		Made by <a href="mailto:emil@pirfalt.se">me</a>
+	</footer>
 
   <script src="assets/script.js"></script>
 </body>
