--- a/about.html
+++ b/about.html
@@ -3,9 +3,34 @@
 <head>
 	<title>Emil Pirfält</title>
 
-  <link href="assets/style.css" rel="stylesheet" />
+	<link href="assets/style.css" rel="stylesheet" />
 </head>
 <body>
-	<h1>about</h1>
+
+	<header>
+		<h1>Emil Pirfält</h1>
+		<p>Geek playing around</p>
+		<img src="assets/images/profile.jpg">
+	</header>
+
+	<nav>
+		<a href="about">About</a>
+		|
+		<a href="hire-me">Hire me</a>
+	</nav>
+
+	<div id="main">
+
+		<article>
+			<h1>Aboutpage</h1>
+		</article>
+
+	</div>
+
+	<footer>
+		Made by <a href="mailto:emil@pirfalt.se">me</a>
+	</footer>
+
+	<script src="assets/script.js"></script>
 </body>
 </html>
