--- a/hire-me.html
+++ b/hire-me.html
@@ -3,58 +3,82 @@
 <head>
 	<title>Emil Pirfält</title>
 
-  <link href="assets/style.css" rel="stylesheet" />
+	<link href="assets/style.css" rel="stylesheet" />
 </head>
 <body>
-<h1 id="-emil-pirf-lt">﻿Emil Pirfält</h1>
-<h2 id="kontakt">Kontakt</h2>
-<table>
-  <tbody><tr>
-    <td>Epost:</td>
-    <td>emil.pirfalt@gmail.com</td>
-  </tr>
-  <tr>
-    <td>Telefon:</td>
-    <td>0733744456</td>
-  </tr>
-  <tr>
-    <td>Född:</td>
-    <td>1985-12-17</td>
-  </tr>
-  <tr>
-    <td>Adress:</td>
-    <td>
-      Nissastigen 18<br>      302 30 Halmstad
-    </td>
-  </tr>
-</tbody></table>
 
-<h2 id="personligt">Personligt</h2>
-<p>Efter mina studier i systemvetenskap ska jag nu börja mitt första utvecklings jobb. Där ser jag fram emot att samarbeta med kunniga, erfarna kollegor och en karriär där jag alltid kan lära mig mer.</p>
-<p>Utöver mitt IT intresse gillar jag att åka skidor, springa, cykla och testar gärna nya saker. Som person är jag nyfiken, tålmodig och positiv.</p>
-<h2 id="kunskaper">Kunskaper</h2>
-<h3 id="detta-kan-jag">Detta kan jag</h3>
-<p>Funktionell programmering, objekt-orienterad programmering, JavaScript, Node.JS och HTML5 (fråga gärna om specifika API:er).</p>
-<h3 id="detta-har-jag-testat-att-anv-nda">Detta har jag testat att använda</h3>
-<p>CSS3, jQuery, Backbone, Phonegap, Haskell, Clojure, Prolog, Java, Scala, C# och SQL.</p>
-<h2 id="utbildning">Utbildning</h2>
-<ul>
-<li><p><strong>Systemvetenskap, Luleå tekniska universitet</strong><br><em>2011-2014. 97.5 hp avklarade.</em><br>Till de många valbara kurserna valde jag nästan uteslutande kurser från Datateknik programmet, t.ex. Design av dynamiska webbsystem och Deklarativa språk. På kvällarna lekte med annan programmering framförallt Node.JS.</p>
-</li>
-<li><p><strong>Högskoleingenjör i Datateknik, Kungliga tekniska högskolan</strong><br><em>2006-2008. 84.0 hp avklarade.</em></p>
-</li>
-</ul>
-<h2 id="arbetslivserfarenhet">Arbetslivserfarenhet</h2>
-<ul>
-<li><p><strong>Restaurang och bar hjälparbetare, Flertal arbetsplatser</strong><br><em>2010-2013. Inkomstkälla för skidåkning i Schweizska alperna.</em></p>
-</li>
-<li><p><strong>Tekniker, Alina Systems AB</strong><br><em>2008-2009. Felsökning och reparation av datorer och datordelar, samt kundsupport. Sommarvikarie följt av helgarbete.</em></p>
-</li>
-<li><p><strong>Takläggare, Industritak i Halmstad AB</strong><br><em>2004-2009. Montering av tätskikt vid platta tak. Sommararbete följt av heltidsarbete.</em></p>
-</li>
-<li><p><strong>Tekniker, Walerska Gymnasiekolan</strong><br><em>2004. Medhjälpare vid omstrukturering av skolans datorer.</em></p>
-</li>
-</ul>
+	<header>
+		<h1>Emil Pirfält</h1>
+		<p>Geek playing around</p>
+		<img src="assets/images/profile.jpg">
+	</header>
 
+	<nav>
+		<a href="about">About</a>
+		|
+		<a href="hire-me">Hire me</a>
+	</nav>
+
+	<div id="main">
+
+	<article>
+		<h1 id="-emil-pirf-lt">﻿Just nu går det att anställa mig!</h1>
+		<h2 id="kontakt">Kontakt</h2>
+		<table>
+		  <tbody><tr>
+		    <td>Epost:</td>
+		    <td>emil.pirfalt@gmail.com</td>
+		  </tr>
+		  <tr>
+		    <td>Telefon:</td>
+		    <td>0733744456</td>
+		  </tr>
+		  <tr>
+		    <td>Född:</td>
+		    <td>1985-12-17</td>
+		  </tr>
+		  <tr>
+		    <td>Adress:</td>
+		    <td>
+		      Nissastigen 18<br>      302 30 Halmstad
+		    </td>
+		  </tr>
+		</tbody></table>
+
+		<h2 id="personligt">Personligt</h2>
+		<p>Efter mina studier i systemvetenskap ska jag nu börja mitt första utvecklings jobb. Där ser jag fram emot att samarbeta med kunniga, erfarna kollegor och en karriär där jag alltid kan lära mig mer.</p>
+		<p>Utöver mitt IT intresse gillar jag att åka skidor, springa, cykla och testar gärna nya saker. Som person är jag nyfiken, tålmodig och positiv.</p>
+		<h2 id="kunskaper">Kunskaper</h2>
+		<h3 id="detta-kan-jag">Detta kan jag</h3>
+		<p>Funktionell programmering, objekt-orienterad programmering, JavaScript, Node.JS och HTML5 (fråga gärna om specifika API:er).</p>
+		<h3 id="detta-har-jag-testat-att-anv-nda">Detta har jag testat att använda</h3>
+		<p>CSS3, jQuery, Backbone, Phonegap, Haskell, Clojure, Prolog, Java, Scala, C# och SQL.</p>
+		<h2 id="utbildning">Utbildning</h2>
+		<ul>
+		<li><p><strong>Systemvetenskap, Luleå tekniska universitet</strong><br><em>2011-2014. 97.5 hp avklarade.</em><br>Till de många valbara kurserna valde jag nästan uteslutande kurser från Datateknik programmet, t.ex. Design av dynamiska webbsystem och Deklarativa språk. På kvällarna lekte med annan programmering framförallt Node.JS.</p>
+		</li>
+		<li><p><strong>Högskoleingenjör i Datateknik, Kungliga tekniska högskolan</strong><br><em>2006-2008. 84.0 hp avklarade.</em></p>
+		</li>
+		</ul>
+		<h2 id="arbetslivserfarenhet">Arbetslivserfarenhet</h2>
+		<ul>
+		<li><p><strong>Restaurang och bar hjälparbetare, Flertal arbetsplatser</strong><br><em>2010-2013. Inkomstkälla för skidåkning i Schweizska alperna.</em></p>
+		</li>
+		<li><p><strong>Tekniker, Alina Systems AB</strong><br><em>2008-2009. Felsökning och reparation av datorer och datordelar, samt kundsupport. Sommarvikarie följt av helgarbete.</em></p>
+		</li>
+		<li><p><strong>Takläggare, Industritak i Halmstad AB</strong><br><em>2004-2009. Montering av tätskikt vid platta tak. Sommararbete följt av heltidsarbete.</em></p>
+		</li>
+		<li><p><strong>Tekniker, Walerska Gymnasiekolan</strong><br><em>2004. Medhjälpare vid omstrukturering av skolans datorer.</em></p>
+		</li>
+		</ul>
+	</article>
+
+	</div>
+
+	<footer>
+		Made by <a href="mailto:emil@pirfalt.se">me</a>
+	</footer>
+
+	<script src="assets/script.js"></script>
 </body>
 </html>
