Refactor styles. Use classes over element styling (.page-main headers excluded)

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 </head>
 <body>
 
-	<header class="mainblock">
-    <h1>Emil Pirfält</h1>
+	<header class="mainblock page-header">
+    <h1 class="page-header-h1">Emil Pirfält</h1>
     <p>Geek playing around</p>
 	</header>
 
-	<div id="main" class="mainblock">
+	<div id="main" class="mainblock page-main">
 
 	<article>
 		<h1 id="-emil-pirf-lt">Just nu går det att anställa mig!</h1>
@@ -74,7 +74,7 @@
 
 	</div>
 
-	<footer class="mainblock">
+	<footer class="mainblock page-footer">
     <img src="assets/images/profile.jpg">
 		<p>Made by me <a href="mailto:emil@pirfalt.se">me</a></p>
 	</footer>
