move build/ to root/ in master

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <header class="mainblock page-header">
     <h1 class="page-header-h1">Emil Pirfält</h1>
-    <p>Geek playing around</p>
+    <p>For hire</p>
   </header>
 
   <div id="main" class="mainblock page-main">
@@ -35,26 +35,18 @@ Till de många valbara kurserna valde jag nästan uteslutande kurser från Datat
 <p><strong>Takläggare, Industritak i Halmstad AB</strong><br><em>2004-2009. Montering av tätskikt vid låglutande tak. Sommararbete följt av heltidsarbete.</em></p>
 <p><strong>Tekniker, Walerska Gymnasiekolan</strong><br><em>2004. Medhjälpare vid omstrukturering av skolans datorer.</em></p>
 <h2>Kontakt</h2>
-<table>
-<tbody>
-<tr>
-<td>Epost:</td>
-<td><a href="mailto:emil@pirfalt.se">emil@pirfalt.se</td>
-</tr>
-<tr>
-<td>Telefon:</td>
-<td>0733744456</td>
-</tr>
-<tr>
-<td>Född:</td>
-<td>1985-12-17</td>
-</tr>
-<tr>
-<td>Adress:</td>
-<td>Nissastigen 18, 302 30 Halmstad</td>
-</tr>
-</tbody>
-</table>
+
+<pre><code>
+{
+  "name": "Emil Pirfält",
+  "contactInformation": {
+    "email": "<a href="mailto:emil@pirfalt.se">emil@pirfalt.se</a>",
+    "phone": "0733744456"
+  },
+  "birthday": "1985-12-17",
+  "Adress": "Nissastigen 18, 302 30 Halmstad"
+}
+</code></pre>
 
   </article>
   </div>
